<resources>
    <string name="app_name">Trabalho1_Cadastro</string>
    <string name="descri_o">Descrição:</string>
    <string name="valor">Valor:</string>
    <string name="pagadores">Pagadores:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="digite_a_descri_o">Digite a descrição</string>
    <string name="cadastrar_item">Cadastrar Item</string>
    <string name="cadastrar_pessoa">Cadastrar Pessoa</string>
    <string name="limpar_o_banco">Limpar o Banco</string>
    <string name="rateio_da_conta">Rateio da Conta</string>
    <string name="cadastrar_p">Cadastrar</string>
    <string name="nome">Nome</string>
</resources>