<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btCadastrarPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/cadastrar_pessoa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btCadastrarItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cadastrar_item"
        app:layout_constraintEnd_toEndOf="@+id/btCadastrarPessoa"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="@+id/btCadastrarPessoa"
        app:layout_constraintTop_toBottomOf="@+id/btCadastrarPessoa" />

    <Button
        android:id="@+id/btRateio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/rateio_da_conta"
        app:layout_constraintEnd_toEndOf="@+id/btCadastrarPessoa"
        app:layout_constraintStart_toStartOf="@+id/btCadastrarPessoa"
        app:layout_constraintTop_toBottomOf="@+id/btCadastrarItem" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/limpar_o_banco"
        app:layout_constraintEnd_toEndOf="@+id/btCadastrarPessoa"
        app:layout_constraintStart_toStartOf="@+id/btCadastrarPessoa"
        app:layout_constraintTop_toBottomOf="@+id/btRateio" />
</androidx.constraintlayout.widget.ConstraintLayout>